argocd/secure-frontend/deploy.yaml
# secure app: react2shell 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react2shell
  namespace: secure-frontend
  labels:
    app: react2shell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react2shell
  template:
    metadata:
      labels:
        app: react2shell
    spec:
      serviceAccountName: react2shell
      # pod-level hardening (satisfies PSS "restricted")
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: react2shell
          image: docker.io/simonangelfong/react2shell:secure-fb0da05353d8693ea906c37d1776c4a4b4470df2
          imagePullPolicy: Always
          # container-level hardening
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 512m
              memory: 512Mi
            limits:
              cpu: 1024m
              memory: 1024Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
